# UnityMMORPG

./: README.md  Server.sln
Common/: config.json
DB/: GameServerDB.sql  Study.sql
DummyClient/: DummyClient.cpp  DummyClient.vcxproj  DummyClient.vcxproj.filters  ServerPacketHandler.cpp  ServerPacketHandler.h  ServerSession.cpp  ServerSession.h  ServerSessionManager.cpp  ServerSessionManager.h  pch.h
GameServer/: ClientPacketHandler.cpp  ClientPacketHandler.h  ClientSession.cpp  ClientSession.h  ClientSessionManager.cpp  ClientSessionManager.h  ConfigManager.cpp  ConfigManager.h  DBManager.cpp  DBManager.h  GameServer.cpp  GameServer.h  GameServer.vcxproj  GameServer.vcxproj.filters  Manager.cpp  Manager.h  Math.cpp  Math.h  Monitoring.cpp  Monitoring.h  Random.cpp  Random.h  Room.cpp  Room.h  Struct.pb.h  main.cpp  pch.h
MonitoringServer/: CMakeLists.txt  ClientPacketHandler.cpp  CustomMemoryPool.cpp  CustomMemoryPool.h  Dependency.cmake  Enum.pb.cc  MonitoringServer.vcxproj  MonitoringServer.vcxproj.filters  Profiler.cpp  Profiler.h  ProfilerUI.cpp  ProfilerUI.h  Protocol.pb.cc  Protocol.pb.h  Struct.pb.cc  imgui.ini  main.cpp  pch.h
MonitoringServer/src/: Enum.pb.h  MonitoringServer.cpp  MonitoringServer.h  ServerPacketHandler.cpp  ServerSession.cpp  ServerSession.h  main.cpp
ServerCore/: Allocator.cpp  Allocator.h  Container.h  CoreGlobal.cpp  CoreGlobal.h  CoreMacro.h  CorePch.h  DBConnection.cpp  DBConnection.h  DBConnectionPool.cpp  DBConnectionPool.h  Exception.cpp  Exception.h  GlobalQueue.cpp  GlobalQueue.h  IocpCore.cpp  IocpEvent.h  Job.h  JobQueueBasedObject.cpp  JobQueueBasedObject.h  JobTimer.cpp  Lock.h  (+36 more)
(+136 files in other folders)
